REGRESSION: [ macOS wk1 ] ASSERTION FAILED: _notifications.contains(notificationID) imported/w3c/web-platform-tests/notifications/constructor-basic.html is flaky crashing https://bugs.webkit.org/show_bug.cgi?id=207307 <rdar://problem/59206964>

Reviewed by Alex Christensen.

Source/WebKitLegacy/mac:

* WebView/WebNotification.h:
* WebView/WebNotification.mm:
(-[WebNotification finalize]):

Tools:

When [MockWebNotificationProvider reset] was called at the end of the test, it would remove all
notifications from the map but not tell WebCore that the notification were discarded. As a result,
WebCore would later tell the MockWebNotificationProvider to cancel the notification but this
notification would no longer be in the map, causing us to hit an assertion in debug.

To address the issue, we now call Notification::finalize() in [MockWebNotificationProvider reset]
to let WebCore know the notification was discarded. This is similar to what is already done for
WebKit2 in WebNotificationManager::clearNotifications().

* DumpRenderTree/mac/MockWebNotificationProvider.mm:
(-[MockWebNotificationProvider reset]):

LayoutTests:

Add test coverage.

* http/wpt/notifications/constructor-basic-bfcache-expected.txt: Added.
* http/wpt/notifications/constructor-basic-bfcache.html: Added.
* platform/mac/TestExpectations:


Canonical link: https://commits.webkit.org/222127@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@258613 268f45cc-cd09-0410-ab3c-d52691b4dbfc